-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8
-
None
-
11e878a4d (dev), 604ae3bd4 (6.8)
When opening the following code in Kate
import QtQuick Item { property int foo: {} }
qmlls asserts with
ASSERT: "e.semanticScope() && e.semanticScope()->scopeType() == QQmlSA::ScopeType::QMLScope" in file /home/nico/workspace/qt6-dev/qtdeclarative/src/qmldom/qqmldomastcreator.cpp, line 3019
Current Qt dev branch, qtdeclarative 7729ed61a68380da65519e4a9f9edab89be06321
For Gerrit Dashboard: QTBUG-125879 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
564382,3 | qmlls: don't crash on invalid code | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
565714,2 | qmlls: don't crash on invalid code | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |