qmlls: don't crash on invalid code

Remove an assert in qqmldomastcreator that fails on invalid qml code,
and strengthen the condition before it to guard from the invalid code
without crashing.

Pick-to: 6.8
Fixes: QTBUG-125879
Change-Id: Iec00a41e88a4c4b14aed7ff03bccb483606f4d79
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>