tests/auto/qmldom/domdata/domitem/crashes/bracketsInBinding.qml
@@ -1,0 +1,5 @@
+import QtQuick
+
+Item {
+    property int foo: {}
+}
